# astra-developer-test-task

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake_single_platform.yml
debian/: rules
debian/patches/series/: dirview.patch
src/: main.cpp
src/custom_system_model/: custom_system_model.cpp  custom_system_model.h
src/custom_system_model_delegate/: custom_system_model_delegate.cpp  custom_system_model_delegate.h
src/main_window/: main_window.cpp  main_window.h
src/utils/: CMakeLists.txt
src/utils/file_utils/: file_utils.cpp  file_utils.h
src/utils/format_utils/: format_utils.cpp  format_utils.h
tests/: CMakeLists.txt
tests/src/test_file_utils/: test_file_utils.cpp  test_file_utils.h
tests/src/test_format_utils/: test_format_utils.cpp  test_format_utils.h
